@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-07-04T01:10:18Z",
+  "timestamp" : "2022-07-04T08:15:02Z",
   "count_outdated" : 374,
   "uniques_outdated" : 202,
-  "count" : 398,
+  "count" : 397,
   "uniques" : 216,
   "clones" : [
     {
       "timestamp": "2022-06-20T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
