@@ -1,3 +1,10 @@
+2022-07-04T08:15:02Z:
+* notice: last 14d: unq all: 2 23
+* notice: prev accum: outdated-unq outdated-all / unq all: 202 374 / 216 398
+* notice: next accum: outdated-unq outdated-all / unq all: 202 374 / 216 397
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
+* notice: removed / changed dates: [] / [2022-06-20]
+
 2022-07-04T01:10:18Z:
 * notice: last 14d: unq all: 2 24
 * notice: prev accum: outdated-unq outdated-all / unq all: 201 372 / 216 396
